# C--

./: .gitignore  hello_world.cpp
AudioProject2024-2025/: ESP32SensorDataSender-MQTT.cpp  ESP32SensorDataSender-WebSocket.cpp  MqttDataTransmission.cpp  main.cpp
Books/A Tour of C++/: tests.cpp  types.cpp
LeetCode/: CMakeLists.txt  LeetCode.cpp  LeetCode.h  main.cpp
LeetCode/LeetCode/: LeetCode.cpp  main.cpp
esp32-platformio/: platformio.ini
esp32-platformio-ESPAsyncServer/: log.txt  platformio.ini
esp32-platformio-ESPAsyncServer/data/: index.html  test-website.html  test-website.js
esp32-platformio-ESPAsyncServer/data/assets/: index-BSnCyCzL.css  index-C_57HCtH.js  index-tRFoyfHC.css
esp32-platformio-ESPAsyncServer/source_files_excluded_from_building_yet/: AsyncServer-Example.cpp  WiFiAP-Example.cpp  main.cpp  old_main.cpp  sthsth_async.cpp  test-website.html  test_server_and_socket.cpp
esp32-platformio-ESPAsyncServer/src/: AsyncServer-Example.cpp  main.cpp  test_server_and_socket.cpp
esp32-platformio/src/: main.cpp  test_server_and_socket.cpp
iot-client/: .env.sample  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
iot-client/src/: App.tsx  index.css
iot-client/src/data/: mockData.ts
multiplayerServer/: CMakeLists.txt
multiplayerServer/Client/: CMakeLists.txt  main.cpp
multiplayerServer/Networking/: CMakeLists.txt
multiplayerServer/Networking/include/Networking/: Base.h  tcpConnection.h  tcpServer.h
multiplayerServer/Networking/include/Networking/client/: tcp_client.h
multiplayerServer/Networking/include/Networking/server/: tcpConnection.h  tcpServer.h
multiplayerServer/Networking/src/: main.cpp  tcpConnection.cpp  tcpServer.cpp  tcp_connection.cpp
multiplayerServer/Networking/src/client/: tcp_client.cpp
multiplayerServer/Networking/src/server/: tcpConnection.cpp  tcpServer.cpp
multiplayerServer/Server/: CMakeLists.txt  main.cpp
others/: CMakeLists.txt  main.cpp
others/Boost_Asio_Tutorial/: main.cpp  printer.h  syncedPrinter.cpp  syncedPrinter.h
others/HammingCode/: main.cpp
others/HammingCode/Boost_tests/: AbsoluteHammingCodeTest.cpp  HammingCodeTests.cpp
others/include/: test.h
others/src/: test.cpp
serverTutorial/Networking/: SimpleSocket.cpp
serverUnix/: Makefile
serverUnix/Networking/: SimpleSocket.cpp  SimpleSocket.md  hdelibc-networking.hpp
serverWindows/: hdelibc.hpp  readme.md
serverWindows/Networking/: SimpleSocket.cpp  SimpleSocket.md  hdelibc-networking.hpp
src/LeetCode/: main.cpp
src/cmake-exercises/: ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj.filters
src/serverUnix/: readme.md
structures/binary_tree/: binary_tree.cpp  main.cpp  node.cpp
(+63 files in other folders)
